# Traveler

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
public/: report_eng.md  report_zh.md
src/traveler/: __init__.py  cli.py
src/traveler/agents/: __init__.py  accommodation_advisor.py  budget_analyst.py  intent_analyzer.py  prompts.py  report_generator.py  researcher.py  route_planner.py  team.py  travel_planner.py  validator.py
src/traveler/api/: app.py  routes.py  schemas.py
src/traveler/config/: __init__.py  logging.py  settings.py
src/traveler/core/: __init__.py  database.py  knowledge.py  mcp_manager.py  model_factory.py
src/traveler/core/mcp/: __init__.py  google_route_mcp.py  hotel_search_mcp.py  weather_mcp.py  web_search_mcp.py
src/traveler/knowledge_docs/: README.md
src/traveler/skills/budget-optimizer/: SKILL.md
src/traveler/skills/intent-analysis/: SKILL.md
src/traveler/skills/local-expert/: SKILL.md
src/traveler/skills/plan-validation/: SKILL.md
src/traveler/skills/report-generation/: SKILL.md
src/traveler/skills/travel-planning/: SKILL.md
src/traveler/skills/travel-planning/references/: planning-guide.md
src/traveler/tools/: __init__.py  travel_tools.py  workflow_helpers.py
src/traveler/workflows/: __init__.py  planning_workflow.py
tests/: 11.py  conftest.py  team_call.py  test_agents.py  test_config.py  test_mcp.py  test_tools.py  workflow_call.py
